--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" /> -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kTPH - PIB</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body> 
+    <div id="root"></div> 
   </body>
 </html>
 
